--- a/draft/alexpub.tex
+++ b/draft/alexpub.tex
@@ -1,5 +1,5 @@
  %=================================================================
-\documentclass[metals,article,submit,moreauthors,pdftex,10pt,a4paper]{Definitions/mdpi} 
+\documentclass[Unknown,article,submit,moreauthors,pdftex,10pt,a4paper]{Definitions/mdpi} 
 \usepackage{siunitx}
 \usepackage{multirow}
 \preto{\abstractkeywords}{\nolinenumbers}
@@ -61,7 +61,7 @@ $^{2}$ \quad State Key Laboratory of Advanced Processing and Recycling of Non-fe
 The titanium  aluminum based intermetallic alloys are promising high temperature structural materials because of their great corrosion resistance at high temperature. Comparing with nickle based alloy,  alloys have lower density and are pron to be utilized in combustion engine, turbine, and other components work at high temperature ranging from 500 \si{\degreeCelsius} to 900 \si{\degreeCelsius} \cite{Clemens2016}. The performance of inner combustion engine with components made of Ti-6Al-4V was improved  20\% because the weight of components decreased from 30\% to 40\% \cite{Bewlay2016}. With the advancement of non-ferrous metallurgy, Ti-Al based components has better economic efficiency than ever before. Thus, Ti-Al based alloys have good prospects for applications in aerospace and automobile industry. 
 Poor ductility of Ti-Al alloy  at room temperature strongly affects the safety structures like turbo of aircraft engine and combustion generator \cite{Munz2017}. Deformation phenomena of Ti-Al alloys have been widely studied in order to overcome the problems associated with the limited ductility and damage tolerance.  Much of the work has been performed on single phase $\gamma$ alloys and polysynthetically twinned crystals\cite{Appel2016}. Rapture failure at the macroscopic scale can be attributed to nucleation, growth and propagation of cracks, but at the microscopic scale defects are initially easily formed in the casting process, such as voids and inclusions \cite{Tang2014}. A great number of literature covers a wide range of factors such as alloy composition, microstructure and deformation temperature. Two-phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\gamma$($\rm Ti_3Al$) alloy \cite{Kim1995}. Due to difficulties in observing the dynamic process during deformation wit experiments, MD simulation has become an effective method to investigate micro deformation mechanism. Defects such as grain boundary, void and segregation play a significant role in the process of fracture \cite{Larsen2016}. Multiscale method have been applied to study deformation behavior of polycrystal with single aluminum \cite{Groh2009} and titanium element respectively \cite{Liu2018}. It's necessary to carefully examine the revolution of defects and its influence on the fracture process at atomic scale. 
 
-The initiation of crack at microscopic scale is a dynamic process, which resulting in difficulties on study about  mechanisms of deformation and cracking, these defects are known to play a fundamental role in the deformation of materials. It has been known that nucleation, growth and coalescence of voids are deemed as the primary mechanism of ductile material fracture, in which void growth is particularly important \cite{Hempel2017a}. Therefore, it is necessary to study the deformation response of intermetallics structural materials with the consideration of microstructure evolution. The effect of void defect is another great concern about properties and deformation mechanism  of TiAl alloy. A previous study on void growth in single crystal $\gamma$-TiAl reveals that void with high volume fraction detracts yield strength, and emission of dislocation \cite{Tang2014, Xu2011}. Evolution of void in ductile polycrystalline was studied in nanoscale with molecular dynamics(MD) simulations \cite{Jing2018a,Elkhateeb2018}. The deformation and fracture mechanisms in the duplex microstructure are plasticity induced grain boundary decohesion and cleavage, while those in the lamellar micro-structure are interface delamination and cracking across the lamellar \cite{Tang2014}. It reveals that existence of voids alone may contribute to strain hardening because they are barriers to dislocation movement \cite{Xiong2015}. However, few literature covers about deformation mechanism of two phase Ti-Al alloy and the role of void in atomic scale. Defects are inevitable as micro-pores and loosen from casting, and in the actual work environment with radiation. A lot of work carried out on the  effect of various defects on the behavior of different materials, show that point defects may affect the properties of materials greatly. The mechanical performance of irradiated copper is affected by the interaction between irradiation and dislocation \cite{Kiener2011}. Vacancy concentration in single crystal and polycrystal Fe–40 at. Al bulk results in an increase of strength \cite{Yang1998}. Ti-Al alloy is a type of typical brittle material, thus it can be assumed that its properties are sensitive to the existence of void defect. Surface defects such as small notches can caused low and high cycle fatigue strength of the Ti–47Al–2W–0.5Si alloy \cite{Nazmy2001}, and the strength of single crystal $\gamma$  TiAl is also lowered by point defect \cite{Wu2016}. The resistance of Ti–6Al–4V alloy, which was processed for typical fan blade applications, to high-cycle fatigue in the presence of foreign- object damage was markedly reduced due to earlier crack initiation.  The nucleation and subsequent near-threshold growth of crack was primarily affected by the stress concentration associated with the foreign-object damage and the presence of small micro-cracks in the damaged zone.This paper focus on the evolution of microstructure, tend to find out its connection to cold deformation behavior of two phase TiAl alloy. MD simulation including model creation and analysis method is given in Section \ref{section:method}, Results and discussion are in Section \ref{section:RD}.
+Void defect can arise due to specific volume differences induced by precipitation or by different thermal expansion or shrinkage upon heating or cooling the specimen. It has been known that nucleation, growth and coalescence of voids are deemed as the primary mechanism of ductile material fracture, in which void growth is particularly important \cite{Hempel2017a}. The initiation of crack at microscopic scale is a dynamic process, which resulting in difficulties on study about  mechanisms of deformation and cracking, these defects are known to play a fundamental role in the deformation of materials.  Therefore, it is necessary to study the deformation response of intermetallics structural materials with the consideration of microstructure evolution. The effect of void defect is another great concern about properties and deformation mechanism  of TiAl alloy. A previous study on void growth in single crystal $\gamma$-TiAl reveals that void with high volume fraction detracts yield strength, and emission of dislocation \cite{Tang2014, Xu2011}. Evolution of void in ductile polycrystalline was studied in nanoscale with molecular dynamics(MD) simulations \cite{Jing2018a,Elkhateeb2018}. The deformation and fracture mechanisms in the duplex microstructure are plasticity induced grain boundary decohesion and cleavage, while those in the lamellar micro-structure are interface delamination and cracking across the lamellar \cite{Tang2014}. It reveals that existence of voids alone may contribute to strain hardening because they are barriers to dislocation movement \cite{Xiong2015}. However, few literature covers about deformation mechanism of two phase Ti-Al alloy and the role of void in atomic scale. Defects are inevitable as micro-pores and loosen from casting, and in the actual work environment with radiation. A lot of work carried out on the  effect of various defects on the behavior of different materials, show that point defects may affect the properties of materials greatly. The mechanical performance of irradiated copper is affected by the interaction between irradiation and dislocation \cite{Kiener2011}. Vacancy concentration in single crystal and polycrystal Fe–40 at. Al bulk results in an increase of strength \cite{Yang1998}. Ti-Al alloy is a type of typical brittle material, thus it can be assumed that its properties are sensitive to the existence of void defect. Surface defects such as small notches can caused low and high cycle fatigue strength of the Ti–47Al–2W–0.5Si alloy \cite{Nazmy2001}, and the strength of single crystal $\gamma$  TiAl is also lowered by point defect \cite{Wu2016}. The resistance of Ti–6Al–4V alloy, which was processed for typical fan blade applications, to high-cycle fatigue in the presence of foreign- object damage was markedly reduced due to earlier crack initiation.  The nucleation and subsequent near-threshold growth of crack was primarily affected by the stress concentration associated with the foreign-object damage and the presence of small micro-cracks in the damaged zone.This paper focus on the evolution of microstructure, tend to find out its connection to cold deformation behavior of two phase TiAl alloy. MD simulation including model creation and analysis method is given in Section \ref{section:method}, Results and discussion are in Section \ref{section:RD}.
 
 \section{Molecular Dynamics Simulation }\label{section:method}
 \subsection{Atomic Potential}
@@ -152,43 +152,39 @@ Stage - \uppercase\expandafter{\romannumeral4}: fracture stage. Following discus
 
 % Due to this effect ( $\alpha_2$ + $\gamma$ ) alloys exhibit some remarkable properties that are unlike those of either constituent.
 \subsection{Deformation Mechanism of Two Phase TiAl Alloy without Void Defects}
-Snapshots of atom configuration at the 5 of 10 key points are shown by Fig. \ref{fig:Defect}.  Atoms with ordered configuration  of $\gamma$ phase grains have been removed in Fig. \ref{fig:Defect}(a),\ $\alpha_2$ phase and defects inside grains have been left. Similarly, $\gamma$ phase grain have been removed in Fig. \ref{fig:Defect}(b), the defects of $\alpha_2$ phase have been left.  The results show that, at stage \uppercase\expandafter{\romannumeral1}, the structure of the model is under typical elastic deformation and the size of simulation box enlarged due to the loading, deformation of the two phase are compatible. Emission of dislocation and evolution of defects initiated at the end of stage \uppercase\expandafter{\romannumeral1}. A  great number of dislocation emitted inside $\gamma$ phase at stage \uppercase\expandafter{\romannumeral2}, however, the dislocation inside $\gamma$ phase was emitted after key point 5 shown by Fig. \ref{fig:Defect}(b). The deformation of $\alpha_2$ phase is earlier than $\gamma$ phase during yield stage, thus local displacement of two phase are incompatible during yield stage.  
-
-
-
+Snapshots of atom configuration at the 5 of 10 key points are shown by Fig. \ref{fig:Defect}.  Atoms with ordered configuration  of $\gamma$ phase grains have been removed in Fig. \ref{fig:Defect}(a) and (b),\ $\alpha_2$ phase and defects inside grains have been left. Similarly, $\gamma$ phase grain have been removed in Fig. \ref{fig:Defect}(b) and (c), the defects of $\alpha_2$ phase have been left.  The results show that, at stage \uppercase\expandafter{\romannumeral1}, the structure of material is under typical elastic deformation and the size of simulation box enlarged due to the loading, deformation of the two phase are compatible. Emission of dislocation and evolution of defects initiated at the end of stage \uppercase\expandafter{\romannumeral1}. A  great number of dislocation emitted inside $\gamma$ phase at beginning of stage \uppercase\expandafter{\romannumeral2}, however, the dislocation inside $\alpha_2$ phase was emitted at the end of stage \uppercase\expandafter{\romannumeral2} shown by Fig. \ref{fig:Defect}(c). The deformation of $\alpha_2$ phase is earlier than $\gamma$ phase during yield stage, thus local displacement of two phases are incompatible during yield stage. The mobility of dislocation is affected by structure of crystal, loading condition and temperature. $\alpha_2$ phase is made up of hcp  structured grain, grain with this type of structure possess less slip system compering with grain with fcc structure \cite{Zhu2012}, thus $\alpha_2$ phase is difficult do be deformed under uniaxial tensile loading. 
 \begin{figure}[ht] 
 	\centering
 	\includegraphics[width=1\linewidth]{img/def-box}
-	\caption{Microstructure evolution inside $\gamma$ phase(a), $\alpha_2$ phase(b) during yield stage}
+	\caption{Microstructure evolution inside $\gamma$ phase(a,b), $\alpha_2$ phase(c,d) during yield stage}
 	\label{fig:Defect}
 \end{figure}
 
-The mobility of dislocation is affected by structure of crystal, loading condition and temperature, and experiments have shown that the velocity of dislocation motion is sensitive to stress and temperature\cite{Stein1960}. The brittleness of two phase Ti-Al alloy attributed to the poor mobility of dislocation at room temperature. Velocity of a screw dislocation can be estimated by Escaig's elastic model \cite{Escaig1968}, it can be written as:
+Experiments have shown that the velocity of dislocation motion is sensitive to stress and temperature\cite{Stein1960}. The brittleness of two phase Ti-Al alloy attributed to the poor mobility of dislocation at room temperature. Velocity of a screw dislocation can be estimated by Escaig's elastic model \cite{Escaig1968}, it can be written as:
 \begin{equation}\label{eq:temp-dis}
 v = v_0 \exp(-\Delta H(\tau^*)/kT)
 \end{equation}
-where the prefactor $v_0$ gives the velocity that would be obtained for each potential mobility, $L$ represents the free length of screw character of dislocation, $\Delta H(\tau^*)$ is activation enthalpy determined by loading conditions. The effect of temperature on the mobility can be evaluated under different loading conditions, thus we chose  $\tau_1^*>\tau_2^*>\tau_3^*$ in formulation (\ref{eq:temp-dis}), normalized velocity is shown in Fig. \ref{fig:temp}. The  velocity  of dislocation movement rise along with increase of  stress, the speed of dislocation is relatively low at 298 K, and it is more sensitive to temperature than shear stress. 
-
+where the prefactor $v_0$ gives the velocity that would be obtained for each potential mobility, $L$ represents the free length of screw character of dislocation, $\Delta H(\tau^*)$ is activation enthalpy determined by loading conditions. The effect of temperature on the mobility can be evaluated under different loading conditions, thus we chose  $\tau_1^*>\tau_2^*>\tau_3^*$ in formulation (\ref{eq:temp-dis}), normalized velocity of dislocation motion is shown by Fig. \ref{fig:temp}. The  velocity  of dislocation movement rise along with increase of  stress, the mobility  of dislocation is relatively poor at room temperature 298 K. Due to motion of dislocation is inactive inside $alpha_2$ phase, piling up of dislocations, the typical strengthening mechanism closely related with interaction between grain boundary and dislocation was not observed in Fig. \ref{fig:Defect}.
 
 \begin{figure}[ht]
 	\centering
 	\begin{minipage}{0.495\textwidth}
 		\includegraphics[width=1\linewidth]{img/temp}
 		\centering
-		\caption{Mobility of dislocation under stress}
+		\caption{Normalized velocity of dislocation motion under different loading conditions}
 		\label{fig:temp}
 	\end{minipage}	
 	\hfill
 	\begin{minipage}{0.495\textwidth}		
 		\includegraphics[width=1\linewidth]{img/dis-summary}
 		\centering
-		\caption{Dislocation length at different stage }
+		\caption{Dislocation length under differentstrain }
 		\label{fig:disum}
 	\end{minipage}
 \end{figure}
 
 
-In Fig. \ref{fig:disum}, length of different type dislocation are given at four stages. Dislocations are recognized and identified using the dislocation analysis (DXA) of OVITO. The length of Shorckley dislocation with Burgers vector $1/6[1 1 2]$ increase sharply during yield stage of the deformation process in Fig. \ref{fig:dis-summary}, but the length of perfect dislocation fluctuate at a low level. Decomposition of the perfect  dislocations split into Shockley partial dislocations as formulation (\ref{eq:dis-1}) and (\ref{eq:dis-2}). The structure spontaneously transform into intrinsic stacking fault (ISF), it can be observed in Fig. \ref{fig:Defect}(a). 
+Length of different types of dislocations are given at four stages in Fig. \ref{fig:disum}. Dislocations are recognized and identified using the dislocation analysis (DXA) of OVITO. The length of Shorckley dislocation with Burgers vector $1/6[1 1 2]$ increase sharply during yield stage of the deformation process in Fig. \ref{fig:disum}, but the length of perfect dislocation fluctuate at a low level. Decomposition of the perfect  dislocations split into Shockley partial dislocations as formulation (\ref{eq:dis-1}) and (\ref{eq:dis-2}). The structure spontaneously transform into intrinsic stacking fault (ISF), it can be observed in Fig. \ref{fig:Defect}(a). 
 
 %\begin{equation}\label{eq:dis-1}
 %[\ 0\ 1\ \overline{1}\ ] \to 1/2 [\ 1\ 1\ \overline{2}\ ]+1/2[\ \overline{1}\ 1\ 0\ ]\\
@@ -200,15 +196,13 @@ In Fig. \ref{fig:disum}, length of different type dislocation are given at four 
 \begin{equation}\label{eq:dis-2}
 1/2 [\ 1\ 0\ \overline{1}\ ] \to 1/6 [\ 1\ 1\ \overline{2}\ ] + 1/6[\ 2\ \overline{1}\ \overline{1}\ ]
 \end{equation}
-Interaction between dislocation with Burgers vector of $1/6 [112] $ and $ 1/6 [11\overline{2}]$ follows the decomposition of perfect dislocation. The process produce leading dislocation and a trailing dislocation, when the two leading Shockley partials combine, they form Lomer–Cottrell junction, a separate dislocation. It's sessile and immobile in the slip plane,plays a role of barrier against other dislocations in the plane. The process is as follow :
+Interaction between dislocation with Burgers vector of $1/6 [112] $ and $ 1/6 [11\overline{2}]$ follows the decomposition of perfect dislocation. The process produce leading dislocation and a trailing dislocation, when the two leading Shockley partials combine, they form Lomer–Cottrell junction, a separate dislocation. It's sessile and immobile in the slip plane, plays a role of barrier against other dislocations in the plane. The process is as follow :
 \begin{equation}\label{eq:dis-3}
 1/6 [\ 1\ 1\ 2\ ] + 1/6 [\ 1\ 1\  \overline{2}\ ] \to 1/3 [\ 1\ 1\ 0\ ]
 \end{equation}
-
-
 The orientation of slip is changed in Fig. \ref{fig:Defect}, because the crystallographically available slip and directions are not continuous across the interface. This may significantly reduce the Schmid factor and thus impede slip transfer. At the $\gamma/\gamma$ interfaces, the orientation of slip plan could change through a relevantly large angle of about 90 degree. Reorientation of slip is always required at the $\alpha_{2}/\gamma$ interface; the smallest angle between the corresponding slip planes ${1 1 1}_{\gamma}$ and ${ 1 0 -1 0}_{\alpha_2}$ is about 19 degree \cite{intro-structure}. From Fig. \ref{fig:Defect}, of the two constituents of ($\alpha_2$+$\gamma$) alloys, the $\alpha_2$ phase is more difficult to deform. 
 
-A reason for the unequal strain partitioning between the $\alpha_2$ and $\gamma$ phase is certainly the strong plastic anisotropy of the $\alpha_2$ phase. TEM examinations performed on tensile tested lamellar alloys have revealed that the limited plasticity of the $\alpha_2$ phase is mainly carried by local slip of <a>-type dislocations with the Burgers vector $b=1/3[11\overline{2}0]$ prism planes shown by Fig. \ref{fig:Defect}, which is by far the easiest slip system in $\alpha_2$ single crystals.  The core of a dislocation intersecting an interface often needs to be transformed. For example, an ordinary 1/2 [110] dislocation gliding in one $\gamma$ grain has to be converted into a $[101]$ super dislocation with the double Burgers vector gliding in an adjacent $\gamma$ grain. At the $\alpha_2/\gamma$ interface, dislocations existing in the $D0_{19}$ structure have to be transformed into dislocations consistent with the $\rm{L1_0}$ structure. These core transformations are associated with a change of the dislocation line energy because the lengths of Burgers vectors and the shear module are different. Dislocations crossing semi-coherent boundaries have to intersect the misfit dislocation, a process that involves elastic interaction, jog formation and the incorporation of gliding dislocations into the mismatch structure of the interface.When slip is forced to cross $\alpha_2$ phase, pyramidal slip of the $\alpha_2$ phase is required, which needs an extremely high shear stress.
+A reason for the unequal strain partitioning between the $\alpha_2$ and $\gamma$ phase is certainly the strong plastic anisotropy of the $\alpha_2$ phase. TEM examinations performed on tensile tested lamellar alloys have revealed that the limited plasticity of the $\alpha_2$ phase is mainly carried by local slip of <a>-type dislocations with the Burgers vector $b=1/3[11\overline{2}0]$ prism planes shown by Fig. \ref{fig:Defect}(b), which is by far the easiest slip system in $\alpha_2$ single crystals.  The core of a dislocation intersecting an interface often needs to be transformed. For example, an ordinary 1/2 [110] dislocation gliding in one $\gamma$ grain has to be converted into a $[101]$ super dislocation with the double Burgers vector gliding in an adjacent $\gamma$ grain. At the $\alpha_2/\gamma$ interface, dislocations existing in the $D0_{19}$ structure have to be transformed into dislocations consistent with the $\rm{L1_0}$ structure. These core transformations are associated with a change of the dislocation line energy because the lengths of Burgers vectors and the shear module are different. Dislocations crossing semi-coherent boundaries have to intersect the misfit dislocation, a process that involves elastic interaction, jog formation and the incorporation of gliding dislocations into the mismatch structure of the interface. When slip is forced to cross $\alpha_2$ phase, pyramidal slip of the $\alpha_2$ phase is required, which needs an extremely high shear stress.
 
 
 \subsection{The effect of void on the strength of material}
@@ -225,21 +219,21 @@ Conventional definition of strength of materials with geometry subtraction was a
 \begin{equation} \label{eq:section} 
 \sigma^* = \sigma_0 \cdot \frac{A^*}{A_0}
 \end{equation}
-where $\sigma_0$ is the strength of model without void defects 5.26 Gpa, and $A_0$ is initial section area,  $A^*$ is effective section area.  In classic theory, the relationship between void size and strength of the model is linear. However, simulation results reveals that two phase Ti-Al alloy is sensitive to existence of void defect.  Comparing with the strength determined by molecular dynamics simulation and the result4s calculated with formulation \ref{eq:section}, it can be assumed that the main factor that affects the strength of materials can be attributed to local behavior of the materials, thus revolution of defects should be examined carefully.
+where $\sigma_0$ is the strength of model without void defects 5.3 Gpa, and $A_0$ is initial section area,  $A^*$ is effective section area.  In classic theory, the relationship between void size and strength of the model is linear. However, simulation results reveals that two phase Ti-Al alloy is sensitive to existence of void defect.  Comparing with the strength determined by molecular dynamics simulation and the result4s calculated with formulation (\ref{eq:section}), it can be assumed that the main factor that affects the strength of materials can be attributed to local behavior of the materials, thus revolution of defects should be examined carefully.
 
 \begin{figure}[ht]
 	\centering
 	\begin{minipage}{0.495\textwidth}
 		\includegraphics[width=1\linewidth]{img/allline}
 		\centering
-		\caption{Stress-Strain}
+		\caption{Stress-strain response of models}
 		\label{fig:stress&strain}
 	\end{minipage}	
 	\hfill
 	\begin{minipage}{0.495\textwidth}		
 		\includegraphics[width=1\linewidth]{img/effect_of_vol}
 		\centering
-		\caption{Strength of models}
+		\caption{Yield strength of material with void}
 		\label{fig:strength}
 	\end{minipage}
 \end{figure}
@@ -256,6 +250,19 @@ It has been observed in Fig. \ref{fig:strength} that voids detracts the strength
 
 \subsection{Evolution of spherical void}
 
+The role of void can be concluded as two main parts: source and obstacles to dislocations, and which part is dominant depends on the location of void. Void inside $\alpha$ phase plays a role of second phase particles, in other words, this type of void possess similar properties as second phase particles. Void at $\alpha/\gamma$ boundary act as source of dislocation. 
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=1\linewidth]{"img/void-gb"}
+	\caption{(a) Fracture mode of two types of model  (b)Evolution of void at  phase boundary}
+	\label{fig:void-gb}
+\end{figure}
+
+Void at $\alpha_2/\gamma$ phase boundary lowered yield strength of the material down to 5.1 Gpa, and caused fracture along the phase boundary. 
+
+Void inside $\alpha_2$ phase induce considerable misfit-stress fields and thus can influence material properties pronouncedly. Such stress fields surrounding the second-phase particles can be due to misfit between $\alpha_2$ phase atoms and 'free' atoms surounded the void.Is a possibly favorable effect of second-phase particles that void defect contribution to the enhancement of mechanical strength. The strengthening effect of the particle inside single phase TiAl alloy have been verified by experiment \cite{Zghal1998}. Considering yielding of a material as related to glide of dislocations, any mechanism obstructing dislocation glide improves the mechanical strength. 
+
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=1\linewidth]{"img/orowan"}
@@ -263,19 +270,20 @@ It has been observed in Fig. \ref{fig:strength} that voids detracts the strength
 	\label{fig:orowan}
 \end{figure}
 
-
-The role of void can be concluded as two main parts: source of dislocation and obstacles to dislocations.  Second-phase particles, precipitated within, as a consequence of a thermal treatment, or taken up, as a consequence of a material processing route, into a matrix of the first, dominant phase, disrupt, associated with the occurrence of incoherent or coherent interfaces, the long-range translation symmetry of the matrix. They may induce considerable misfit-stress fields and thus can influence material properties pronouncedly. Such stress fields surrounding the second-phase particles can be due to misfit between the volume occupied by the second-phase particle when unconstrained and the space (“hole”) put at its disposal by the matrix. Such misfit can arise due to specific volume differences induced by precipitation or by different thermal expansion or shrinkage upon heating or cooling the specimen. A possibly favorable effect of second-phase particles is a contribution to the enhancement of mechanical strength. Considering yielding of a material as related to glide of dislocations, any mechanism obstructing dislocation glide improves the mechanical strength. In the discussion of the Frank–Read source for dislocation production  it was made clear that second-phase particles can serve as obstacles for dislocation migration: the stress fields surrounding the second-phase particles can be of block propagation of the stress field of a migrating dislocation: the second-phase particle acts as pinning point. It was already indicated that in order that a dislocation can pass two pinning points a critical shear stress is needed that depends on the distance between  obstacles, which can be regarded as second-phase particles:
+The defect evolution neighboring the void during yield stage is given by Fig. \ref{fig:orowan}(a), the role of void is similar to second-phase particles. It can serve as obstacles for dislocation migration which is shown by Fig. \ref{fig:orowan}(b): the stress fields surrounding the second-phase particles can be of block propagation of the stress field of a migrating dislocation, the void particle acts as pinning point. It was already indicated that a dislocation can pass two pinning points a critical shear stress is needed that depends on the distance between  obstacles, which can be regarded as second-phase particles\cite{Xiong2015}:
 \begin{equation} \label{eq:orowan} 
 \tau_0 = Gb/d
 \end{equation}
-where $d$ represents the distance between obstancle A and B , reflects the dependence of the critical shear stress $\tau_0$ on the second-phase particle density and distribution. This mechanism for hardening is designated as the Orowan process with $\tau_0$ as the Orowan (shear) stress.
+where $d$ represents the distance between two obstacle A and B in , reflects the dependence of the critical shear stress $\tau_0$ on the second-phase particle density and distribution. This mechanism for hardening is designated as the Orowan process with $\tau_0$ as the Orowan (shear) stress.
 
 As a result of the Orowan process, upon passage of the pinning points by a series of gliding dislocations, a system of concentric loops is formed around the second-phase particles. Consequently, the effective average distance between the second-phase particles has decreased to d which implies a necessary increase of the value of critical shear stress required for continuation of dislocation glide. The width of a burgers vector, will be generated at both sides of a crystal along the direction of the burgers vector after dislocation traversing the entire crystal, as is shown in \ref{fig:orowan}. A small tep will be formed at spherical void surface toward the void interior after dislocation absorption at spherical void surfaces. If a great number of dislocation slip along their respective systems towards the spherical nanovoid in all directions, and are absorbed at spherical void surfaces, the spherical nanovoid will eventually shrink from the dash circle 
+
+
+
+
 \section{conclusion}
-In this paper, deformation behavior of two phase TiAl alloy under tensile loading was simulated with MD method. The mechanism of deformation was investigated under atomic scale, and the effect of void defect on the properties of two phase TiAl alloy was also studied.  The conclusions are as follows:
-
-(1) The major deformation component of the two phase TiAl alloy is $\gamma$ phase,$\alpha$ phase is harder to be deformed, this inhomogeneity results in cracks at interface of the two phase. 
-
+In this paper, deformation behavior of two phase TiAl alloy under tensile loading was simulated with MD method. The mechanism of deformation was investigated under atomic scale, and the effect of void defect on the properties of two phase TiAl alloy was also studied.  The conclusions are as follows:\\
+(1) The major deformation component of the two phase TiAl alloy is $\gamma$ phase,$\alpha$ phase is harder to be deformed, this inhomogeneity results in cracks at interface of the two phase. \\
 (2) The effect of the void defect on the strength of the two phase alloy is sensitive to the location of the void. The void located inside the grain decrease the strength to the material because this type defect weaken the grain thus caused even more serious stress concentration, and the void at phase boundary have less impact on the strength of the material because this type void help to release of local stress at grain boundary.
 
 
